--- a/.env
+++ b/.env
@@ -11,12 +11,14 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-MAILGUN_DOMAIN=steambd.com
-MAILGUN_SECRET=key-275d03071a9637cf5618e1f84080e728
+MAILGUN_DOMAIN=sandbox55c0b16249d14be19867797e2fd417de.mailgun.org
+MAILGUN_SECRET=key-18dcff566d27b7af58903ba1550873af
 
-MAIL_DRIVER=mailgun
-MAIL_HOST=smtp.mailgun.org
+
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=postmaster@steambd.com
-MAIL_PASSWORD=32b7dd348a53efd2cbe36d3577c397ab
-MAIL_ENCRYPTION=tls
+MAIL_USERNAME=meathsive.jhp
+MAIL_PASSWORD=meathsive10816
+MAIL_FROM=meathsive.jhp@gmail.com
+MAIL_NAME=swapnotthan
