--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ vendor/
 .env.*.php
 .env.php
 .env
+.DS_Store
 ### PhpStorm ###
 
 *.iml
@@ -22,3 +23,4 @@ composer.lock
 
 # Packages
 _ide_helper.php
+.DS_Store
