--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=NOJD0rATigELqkhrpkrViSwKGVSWb5ei
 
-DB_HOST=localhost
-DB_DATABASE=swapnotthan_new
+DB_HOST=127.0.0.1
+DB_DATABASE=Swapnotthan_new
 DB_USERNAME=root
 DB_PASSWORD=
 
